# cblapack

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.am  README.md  blas.inc  cblas.inc  configure.ac  doxygen.cfg  emacs.el  lapack.inc  make.inc
BLAS/SRC/: caxpy.c  cdotc.c  cdotu.c  cgbmv.c  cgemm.c  cgemv.c  cgerc.c  cgeru.c  chbmv.c  chemm.c  chemv.c  cher.c  cher2.c  cher2k.c  cherk.c  chpmv.c  chpr.c  chpr2.c  crotg.c  cscal.c  csscal.c  cswap.c  csymm.c  csyr2k.c  csyrk.c  ctbmv.c  ctbsv.c  ctpmv.c  ctpsv.c  ctrmm.c  ctrmv.c  ctrsm.c  ctrsv.c  daxpy.c  dcabs1.c  dgbmv.c  dgemm.c  dgemv.c  dger.c  dnrm2.c  (+98 more)
BLAS/TESTING/: Makeblat1  cblat1.c  cblat3.c  sblat3.c  zblat3.c
INSTALL/: LAPACK_version.c  Makefile  dlamchtst.c  dsecndtst.c  lsame.c  lsametst.c  secondtst.c  slamchtst.c  tstiee.c
SRC/: cbdsqr.c  cgbbrd.c  cgbcon.c  cgbequ.c  cgbequb.c  cgbrfs.c  cgbrfsx.c  cgbsv.c  cgbsvx.c  cgbsvxx.c  cgbtf2.c  cgbtrf.c  cgbtrs.c  cgebak.c  cgebal.c  cgebd2.c  cgebrd.c  cgecon.c  cgeequ.c  cgeequb.c  cgees.c  cgeesx.c  cgeev.c  cgeevx.c  cgegs.c  cgegv.c  cgehd2.c  cgehrd.c  cgelq2.c  cgelqf.c  cgels.c  cgelsd.c  cgelss.c  cgelsx.c  cgelsy.c  cgeql2.c  cgeqlf.c  cgeqp3.c  cgeqpf.c  cgeqr2.c  (+1512 more)
TESTING/EIG/: alareq.c  alarqg.c  alasmg.c  cchkbb.c  cchkec.c  cchkgl.c  cchkhb.c  cchkhs.c  cchkst.c  cckglm.c  cckgqr.c  ccklse.c  cdrges.c  cdrgev.c  cdrgsx.c  cdrvbd.c  cdrvev.c  cdrvgg.c  cdrvsx.c  cdrvvx.c  cerrbd.c  cerred.c  cerrgg.c  cerrhs.c  cget22.c  cget23.c  cget24.c  cget35.c  cget37.c  cget52.c  chkxer.c  clarhs.c  cslect.c  cunt01.c  dchkbl.c  dchkec.c  dchkee.c  dchkgg.c  dchkgk.c  dchkhs.c  (+80 more)
TESTING/LIN/: Makefile  aladhd.c  alaerh.c  alaesm.c  alasum.c  alasvm.c  cchkaa.c  cchkge.c  cchkgt.c  cchkhe.c  cchkhp.c  cchklq.c  cchkpb.c  cchkps.c  cchkpt.c  cchkq3.c  cchkrq.c  cchksp.c  cchksy.c  cchktp.c  cchktz.c  cdrvgbx.c  cdrvge.c  cdrvgt.c  cdrvhe.c  cdrvhp.c  cdrvls.c  cdrvpo.c  cdrvrf2.c  cdrvrf4.c  cdrvrfp.c  cerrge.c  cerrgex.c  cerrgt.c  cerrhe.c  cerrls.c  cerrpox.c  cerrqp.c  cerrrfp.c  cerrrq.c  (+168 more)
TESTING/MATGEN/: clagge.c  clagsy.c  clarge.c  clatm2.c  dlarge.c  dlarnd.c  dlaror.c  dlatm1.c  dlatm5.c  dlatm7.c  dlatmt.c  slagge.c  slagsy.c  slarge.c  slarnd.c  slaror.c  slatm1.c  slatm7.c  zlahilb.c  zlarge.c  zlarnd.c  zlarot.c  zlatm1.c  zlatm2.c  zlatm6.c  zlatme.c  zlatms.c
cygwin/: Makefile  blas.inc  lapack.inc
doc/: mainpage.hdoc
include/: Makefile.am  blasproto.h  blaswrap.h  cblapack.h  clapack.h  eig.h  lapackproto.h  lin.h  matgen.h
include/cblapack/: blas.h  clapack.h
scripts/: addheader.sh  constify_chars.sh  extract_declarations.sh  fix_cblas.sh  fix_test.sh  fix_test_blas.sh  fix_xerbla.sh  headers.sh  remove_comments.sh  remove_externs.sh
src/blas/: ccopy.c  cdotu.c  cgbmv.c  cgemm.c  cgemv.c  chbmv.c  chemm.c  chemv.c  cher.c  cher2.c  cher2k.c  cherk.c  chpmv.c  chpr.c  chpr2.c  csrot.c  csscal.c  csymm.c  csyr2k.c  csyrk.c  ctbmv.c  ctbsv.c  ctpmv.c  ctpsv.c  ctrmm.c  ctrmv.c  ctrsm.c  ctrsv.c  dasum.c  dcopy.c  ddot.c  dgbmv.c  dgemm.c  dgemv.c  drotg.c  drotm.c  drotmg.c  dsbmv.c  dsdot.c  dspmv.c  (+82 more)
src/cblas/: cblas_caxpy.c  cblas_ccopy.c  cblas_cdotc_sub.c  cblas_cdotu_sub.c  cblas_cgbmv.c  cblas_cgemm.c  cblas_cgemv.c  cblas_cgerc.c  cblas_cgeru.c  cblas_chbmv.c  cblas_chemm.c  cblas_chemv.c  cblas_cher.c  cblas_cher2.c  cblas_cher2k.c  cblas_cherk.c  cblas_chpmv.c  cblas_chpr.c  cblas_chpr2.c  cblas_cscal.c  cblas_csscal.c  cblas_cswap.c  cblas_csymm.c  cblas_csyr2k.c  cblas_csyrk.c  cblas_ctbmv.c  cblas_ctbsv.c  cblas_ctpmv.c  cblas_ctpsv.c  cblas_ctrmm.c  cblas_ctrmv.c  cblas_ctrsm.c  cblas_ctrsv.c  cblas_dasum.c  cblas_daxpy.c  cblas_dcopy.c  cblas_ddot.c  cblas_dgbmv.c  cblas_dgemm.c  cblas_dgemv.c  (+104 more)
src/lapack/: cbdsqr.c  cgbequb.c  cgbrfs.c  cgbrfsx.c  cgbsv.c  cgebak.c  cgebrd.c  cgecon.c  cgeequb.c  cgees.c  cgeesx.c  cgegv.c  cgelq2.c  cgelsd.c  cgeql2.c  cgeqlf.c  cgeqpf.c  cgeqr2.c  cgeqrf.c  cgerfs.c  cgerq2.c  cgerqf.c  cgesc2.c  cgesvd.c  cgetc2.c  (+756 more)
test/: Makefile.am  test_blas1  test_blas2  test_blas3  test_cbak.sh  test_cbal.sh  test_cbb.sh  test_cec.sh  test_ced.sh  test_cgbak.sh  test_cgbal.sh  test_cgd.sh  test_cgg.sh  test_cglm.sh  test_cgqr.sh  test_cgsv.sh  test_clse.sh  test_cnep.sh  test_csb.sh  test_csep.sh  test_csg.sh  test_csvd.sh  test_ctest.sh  test_ctest_rfp.sh  test_dbak.sh  test_dbal.sh  test_dbb.sh  test_dec.sh  test_ded.sh  test_dgbak.sh  test_dgbal.sh  test_dgd.sh  test_dgg.sh  test_dglm.sh  test_dgqr.sh  test_dgsv.sh  test_dlse.sh  test_dnep.sh  test_dsb.sh  test_dsep.sh  (+50 more)
test/BLAS/: Makeblat2  Makeblat3  cblat1.c  cblat1.h  cblat2.c  cblat2.h  cblat3.c  cblat3.h  dblat1.c  dblat1.h  dblat2.c  dblat2.h  dblat3.c  dblat3.h  main.c  main.h  sblat1.c  sblat1.h  sblat2.c  sblat2.h  sblat3.c  sblat3.h  zblat1.c  zblat1.h  zblat2.c  zblat2.h  zblat3.c  zblat3.h
test/EIG/: Makefile  alahdg.c  cbdt03.c  cchkbd.c  cchkbk.c  cchkbl.c  cchkee.c  cchkgg.c  cchkgk.c  cckgsv.c  cdrgvx.c  cdrves.c  cdrvsg.c  cdrvst.c  cdrvvx.c  cerrec.c  cerrst.c  cget02.c  cget22.c  cget23.c  cget36.c  cget38.c  chbt21.c  chet21.c  chpt21.c  clarfy.c  clarhs.c  clatm4.c  clctes.c  csbmv.c  cunt01.c  cunt03.c  dbdt03.c  dchkbb.c  dchkbd.c  dchkbk.c  dchkgl.c  dckglm.c  dckgsv.c  dcklse.c  (+111 more)
test/LIN/: aladhd.c  alaerh.c  alahd.c  cchkaa.c  cchkeq.c  cchkgb.c  cchkge.c  cchkgt.c  cchkhe.c  cchkhp.c  cchklq.c  cchkpb.c  cchkpo.c  cchkpp.c  cchkps.c  cchkpt.c  cchkq3.c  cchkql.c  cchkqp.c  cchkqr.c  cchkrfp.c  cchkrq.c  cchksp.c  cchksy.c  cchktb.c  cchktp.c  cchktr.c  cchktz.c  cdrvgb.c  cdrvgbx.c  cdrvge.c  cdrvgex.c  cdrvgt.c  cdrvhe.c  cdrvhp.c  cdrvls.c  cdrvpb.c  cdrvpo.c  cdrvpox.c  cdrvpp.c  (+572 more)
test/MATGEN/: clagge.c  claghe.c  clagsy.c  clahilb.c  clarge.c  clarnd.c  claror.c  clarot.c  clatm1.c  clatm3.c  clatm5.c  clatm6.c  clatme.c  clatmr.c  clatms.c  clatmt.c  dlagge.c  dlagsy.c  dlahilb.c  dlarge.c  dlaror.c  dlarot.c  dlatm1.c  dlatm5.c  dlatm6.c  dlatm7.c  dlatme.c  dlatmr.c  dlatms.c  dlatmt.c  slagge.c  slagsy.c  slahilb.c  slarge.c  slaror.c  slarot.c  slatm1.c  slatm5.c  slatm6.c  slatm7.c  (+17 more)
(+77 files in other folders)
